--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             aria-haspopup="true" aria-expanded="false">
             + Content
           </a>
-          <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown"> -->
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="https://www.github.com/Zizuar">Portfolio</a>
             <a class="dropdown-item" href="contact.html">Contact</a>
             <div class="dropdown-divider"></div>
