--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-center" style="background-color: #5FB5BF;">
-    <a class="navbar-brand" href="#"><span class="badge badge-dark">Donald P. Polansky</span></a>
+    <a class="navbar-brand" href="https://www.linkedin.com/in/donaldpolansky/"><span class="badge badge-dark">Donald P. Polansky</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
