--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <!-- </div> -->
                   <div class="row">
                     <div class="col-md-6"><h1>Glass & Door Int.:</h1><br>Corporate Systems Analyst (2018) <br> Customer Service Manager (2014-2018) <br> CRM Administrator (2012-2018) <br> Production Control Manager (2006-2014)</div>
-                    <div class="col-md-6"><h1>Programs & Languages:</h1><br>HTML; CSS; javaScript; .nodejs;
+                    <div class="col-md-6"><h1>Programs & Languages:</h1><br>HTML; CSS; javaScript; .nodejs; express; MYSQL; Sequelize;
                         </div>
                     
                   </div>
